<resources>
    <string name="app_name">Quiz App</string>
    <string name="next_question">Wait for next question.</string>
    <string name="game_end">Game end. Wait for results.</string>
    <string name="turn">%1$s turn!</string>
    <string name="win">Win: %1$s</string>
    <string name="lose">Lose: %1$s</string>
    <string name="results">RESULTS</string>
    <string name="game_result">Game Result</string>
    <string name="p1">P1</string>
    <string name="p1_username">%1$s</string>
    <string name="p2">P2</string>
    <string name="p2_username">%1$s</string>
    <string name="final_score">Final Score</string>
    <string name="p1_score">P1 Score</string>
    <string name="p2_score">P2 Score</string>
    <string name="level">Level: %1$s</string>
    <string name="point">Point +%1$s | (%2$s/100)</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="github">github.com/samet-ozkan</string>
    <string name="username">%1$s</string>
    <string name="play">PLAY</string>
    <string name="logout">LOGOUT</string>
    <string name="email">%1$s</string>
    <string name="vs">VS</string>
    <string name="question">%1$s</string>
    <string name="choiceA">%1$s</string>
    <string name="choiceB">%1$s</string>
    <string name="choiceC">%1$s</string>
    <string name="choiceD">%1$s</string>
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>
    <string name="login">LOGIN</string>
    <string name="username_input">Username</string>
    <string name="register">REGISTER</string>
    <string name="invalid_button">Invalid Button!</string>
    <string name="you_win">You Win!</string>
    <string name="you_lose">You Lose!</string>
    <string name="draw">Draw</string>
    <string name="p1_username_text">P1 Username</string>
    <string name="p2_username_text">P2 Username</string>
    <string name="level_text">Level</string>
    <string name="point_text">Point</string>
    <string name="win_text">Win</string>
    <string name="lose_text">Lose</string>
    <string name="username_text">Username</string>
    <string name="email_text">Email</string>
    <string name="avatar">Avatar</string>
    <string name="colon">:</string>
    <string name="waiting">Waiting for P2</string>
    <string name="p1_avatar">P1 Avatar</string>
    <string name="p1_question1">P1 Question-1</string>
    <string name="p1_question2">P1 Question-2</string>
    <string name="p1_question3">P1 Question-3</string>
    <string name="p1_question4">P1 Question-4</string>
    <string name="p1_question5">P1 Question-5</string>
    <string name="p2_avatar">P2 Avatar</string>
    <string name="p2_question1">P2 Question-1</string>
    <string name="p2_question2">P2 Question-2</string>
    <string name="p2_question3">P2 Question-3</string>
    <string name="p2_question4">P2 Question-4</string>
    <string name="p2_question5">P2 Question-5</string>
    <string name="question_text">Question</string>
    <string name="choiceA_text">A</string>
    <string name="choiceC_text">C</string>
    <string name="choiceB_text">B</string>
    <string name="choiceD_text">D</string>
    <string name="turn_text">Player Turn</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="ok">OK</string>
    <string name="lose_description">You lost because you left the game.</string>
    <string name="win_description">Your opponent has left the game.</string>


</resources>